--- a/.github/workflows/build-lzstring.yaml
+++ b/.github/workflows/build-lzstring.yaml
@@ -6,9 +6,6 @@ on:
     branches:
       - main
 
-# Centralize the Python version list
-x-python-versions: &python_versions [3.11, 3.12, 3.13, 3.14]
-
 env:
   PYTHON_VERSIONS: "3.11 3.12 3.13 3.14"
 
@@ -50,7 +47,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: *python_versions
+        python-version: [3.11, 3.12, 3.13, 3.14]
     steps:
       - uses: actions/checkout@v3
 
@@ -77,7 +74,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: *python_versions
+        python-version: [3.11, 3.12, 3.13, 3.14]
     steps:
       - uses: actions/checkout@v3
 
