--- a/lzstring/pyproject.toml
+++ b/lzstring/pyproject.toml
@@ -1,10 +1,8 @@
 [build-system]
-requires = ["maturin>=0.13,<0.14"]
+requires = ["maturin>=1.8.0"]
 build-backend = "maturin"
 
 [project]
 name = "lzstring_optimized"
 requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Rust",
-]
+classifiers = ["Programming Language :: Rust"]
