--- a/.github/workflows/build-lzstring.yaml
+++ b/.github/workflows/build-lzstring.yaml
@@ -6,16 +6,13 @@ on:
     branches:
       - main
 
-env:
-  PYTHON_VERSIONS: "3.11 3.12 3.13 3.14"
-
 jobs:
   linux-wheels:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         target: [x86_64-unknown-linux-gnu, i686-unknown-linux-gnu]
-        python-version: [3.11, 3.12, 3.13, 3.14]
+        python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v4
 
@@ -34,7 +31,7 @@ jobs:
     strategy:
       matrix:
         target: [aarch64-unknown-linux-gnu]
-        python-version: [3.11, 3.12, 3.13, 3.14]
+        python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v4
 
@@ -52,7 +49,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.11, 3.12, 3.13, 3.14]
+        python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v4
 
@@ -79,7 +76,7 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: [3.11, 3.12, 3.13, 3.14]
+        python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v4
 
