--- a/.github/workflows/build-lzstring.yaml
+++ b/.github/workflows/build-lzstring.yaml
@@ -38,13 +38,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust target
-        run: rustup target add ${{ matrix.target }}
+      - uses: PyO3/maturin-action@v1
+        with:
+          working-directory: lzstring
+          maturin-version: latest
+          command: build
+          args: --release --sdist -i ${{ matrix.python-version }} --target ${{ matrix.target }}
+      # - name: Install Rust target
+      #   run: rustup target add ${{ matrix.target }}
 
-      - name: Build arm64 wheels
-        run: |
-          pip install maturin
-          cd lzstring && maturin build --release --sdist -i ${{ matrix.python-version }} --target aarch64-unknown-linux-gnu --manylinux manylinux_2_28
+      # - name: Build arm64 wheels
+      #   run: |
+      #     pip install maturin
+      #     cd lzstring && maturin build --release --sdist -i ${{ matrix.python-version }} --target aarch64-unknown-linux-gnu --manylinux manylinux_2_28
 
       - uses: actions/upload-artifact@v4
         with:
