--- a/.github/workflows/build-lzstring.yaml
+++ b/.github/workflows/build-lzstring.yaml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        target: [x86_64-unknown-linux-gnu, i686-unknown-linux-gnu]
+        target:
+          - x86_64-unknown-linux-gnu
+          # - i686-unknown-linux-gnu
         python-version: [3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v4
@@ -32,7 +34,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-wheels-${{ matrix.target }}
+          name: linux-wheels-${{ matrix.target }}-${{ matrix.python-version }}
           path: lzstring/target/wheels/
 
   linux-arm64-wheel:
@@ -66,7 +68,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: linux-wheels-aarch64
+          name: linux-wheels-aarch64-${{ matrix.python-version }}
           path: lzstring/target/wheels/
 
   osx-wheels:
