--- a/.github/workflows/build-color_palette_extract.yaml
+++ b/.github/workflows/build-color_palette_extract.yaml
@@ -1,121 +1,137 @@
-# name: publish-pypi-color_palette_extract
+name: publish-pypi-color_palette_extract
 
-# on:
-#   workflow_dispatch:
-#   push:
-#     branches:
-#       - main
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   linux-wheels:
-#     runs-on: ubuntu-22.04
-#     strategy:
-#       matrix:
-#         target:
-#           - x86_64-unknown-linux-gnu
-#           # - i686-unknown-linux-gnu
-#         python-version: [3.11, 3.12, 3.13]
-#     steps:
-#       - uses: actions/checkout@v4
+jobs:
+  check-version:
+    runs-on: ubuntu-latest
+    outputs:
+      published: ${{ steps.check.outputs.published }}
+    steps:
+      - uses: actions/checkout@v4
 
-#       # - uses: PyO3/maturin-action@v1
-#       #   with:
-#       #     working-directory: color_palette_extract
-#       #     maturin-version: latest
-#       #     command: build
-#       #     args: --release --sdist -i ${{ matrix.python-version }} --target ${{ matrix.target }}
-#       - name: Install Rust target
-#         run: rustup target add ${{ matrix.target }}
+      - name: Extract version from Cargo.toml
+        id: get-version
+        run: |
+          VERSION=$(grep -Po '(?<=^version = ")[^"]+' color_palette_extract/Cargo.toml)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-#       - name: Build wheels
-#         run: |
-#           pip install maturin
-#           cd color_palette_extract && maturin build --release --sdist -i ${{ matrix.python-version }} --target ${{ matrix.target }} --manylinux manylinux_2_34
+      - name: Check if version is published on PyPI
+        id: check
+        run: |
+          VERSION=${{ steps.get-version.outputs.version }}
+          PACKAGE_NAME=color_palette_extract-optimized  # use the name as it appears on PyPI
 
-#       - uses: actions/upload-artifact@v4
-#         with:
-#           name: linux-wheels-${{ matrix.target }}-${{ matrix.python-version }}
-#           path: color_palette_extract/target/wheels/
+          echo "Checking if $PACKAGE_NAME==$VERSION is already on PyPI..."
+          if curl --silent --fail "https://pypi.org/pypi/$PACKAGE_NAME/$VERSION/json"; then
+            echo "published=true" >> $GITHUB_OUTPUT
+            echo "$PACKAGE_NAME $VERSION is already published."
+          else
+            echo "published=false" >> $GITHUB_OUTPUT
+            echo "$PACKAGE_NAME $VERSION is NOT published."
+          fi
 
-#   linux-arm64-wheel:
-#     runs-on: ubuntu-22.04-arm
-#     strategy:
-#       matrix:
-#         target: [aarch64-unknown-linux-gnu]
-#         python-version: [3.11, 3.12, 3.13]
-#     steps:
-#       - uses: actions/checkout@v4
-#       # - name: Build in manylinux container
-#       #   run: |
-#       #     PYTHON_VER_SHORT=$(echo "${{ matrix.python-version }}" | tr -d .)  # e.g. "3.11" → "311"
+  linux-wheels:
+    needs: check-version
+    if: needs.check-version.outputs.published == 'false'
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-gnu
+          # - i686-unknown-linux-gnu
+        python-version: [3.11, 3.12, 3.13]
+    steps:
+      - uses: actions/checkout@v4
 
-#       #     docker run --rm -v "$PWD:/io" quay.io/pypa/manylinux_2_24_aarch64 bash -c "
-#       #       /opt/python/cp${PYTHON_VER_SHORT}-cp${PYTHON_VER_SHORT}/bin/pip install maturin &&
-#       #       cd /io/color_palette_extract &&
-#       #       /opt/python/cp${PYTHON_VER_SHORT}-cp${PYTHON_VER_SHORT}/bin/maturin build \
-#       #         --release \
-#       #         --target aarch64-unknown-linux-gnu \
-#       #         --manylinux 2_24 \
-#       #         -i python${{ matrix.python-version }}
-#       #     "
-#       - name: Install Rust target
-#         run: rustup target add ${{ matrix.target }}
+      - name: Install Rust target
+        run: rustup target add ${{ matrix.target }}
 
-#       - name: Build arm64 wheels
-#         run: |
-#           pip install maturin
-#           cd color_palette_extract && maturin build --release --sdist -i ${{ matrix.python-version }} --target aarch64-unknown-linux-gnu --manylinux manylinux_2_34
+      - name: Build wheels
+        run: |
+          pip install maturin
+          cd color_palette_extract && maturin build --release --sdist -i ${{ matrix.python-version }} --target ${{ matrix.target }} --manylinux manylinux_2_34
 
-#       - uses: actions/upload-artifact@v4
-#         with:
-#           name: linux-wheels-aarch64-${{ matrix.python-version }}
-#           path: color_palette_extract/target/wheels/
+      - uses: actions/upload-artifact@v4
+        with:
+          name: linux-wheels-${{ matrix.target }}-${{ matrix.python-version }}
+          path: color_palette_extract/target/wheels/
 
-#   osx-wheels:
-#     runs-on: macos-latest
-#     strategy:
-#       matrix:
-#         python-version: [3.11, 3.12, 3.13]
-#     steps:
-#       - uses: actions/checkout@v4
+  linux-arm64-wheel:
+    needs: check-version
+    if: needs.check-version.outputs.published == 'false'
+    runs-on: ubuntu-22.04-arm
+    strategy:
+      matrix:
+        target: [aarch64-unknown-linux-gnu]
+        python-version: [3.11, 3.12, 3.13]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install Rust target
+        run: rustup target add ${{ matrix.target }}
 
-#       - uses: actions-rs/toolchain@v1
-#         with:
-#           toolchain: nightly
-#           default: true
+      - name: Build arm64 wheels
+        run: |
+          pip install maturin
+          cd color_palette_extract && maturin build --release --sdist -i ${{ matrix.python-version }} --target aarch64-unknown-linux-gnu --manylinux manylinux_2_34
 
-#       - uses: actions/setup-python@v4
-#         with:
-#           python-version: ${{ matrix.python-version }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: linux-wheels-aarch64-${{ matrix.python-version }}
+          path: color_palette_extract/target/wheels/
 
-#       - name: Build wheels
-#         run: |
-#           pip install maturin
-#           cd color_palette_extract && maturin build --release
+  osx-wheels:
+    needs: check-version
+    if: needs.check-version.outputs.published == 'false'
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: [3.11, 3.12, 3.13]
+    steps:
+      - uses: actions/checkout@v4
 
-#       - uses: actions/upload-artifact@v4
-#         with:
-#           name: osx-${{ matrix.python-version }}-wheel
-#           path: color_palette_extract/target/wheels/
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          default: true
 
-#   push:
-#     needs: [linux-wheels, linux-arm64-wheel, osx-wheels]
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - uses: actions/download-artifact@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-#       - name: Collect wheels
-#         run: |
-#           mkdir wheels
-#           find . -type f -name "*.whl" -exec cp {} wheels/ \;
+      - name: Build wheels
+        run: |
+          pip install maturin
+          cd color_palette_extract && maturin build --release
 
-#       - name: Show collected wheels
-#         run: ls -lh wheels
+      - uses: actions/upload-artifact@v4
+        with:
+          name: osx-${{ matrix.python-version }}-wheel
+          path: color_palette_extract/target/wheels/
 
-#       - name: Publish to PyPI
-#         uses: pypa/gh-action-pypi-publish@release/v1
-#         with:
-#           password: ${{ secrets.PYPI_API_TOKEN }}
-#           packages_dir: wheels/
-#           verify_metadata: false
+  push:
+    if: needs.check-version.outputs.published == 'false'
+    needs: [check-version, linux-wheels, linux-arm64-wheel, osx-wheels]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+
+      - name: Collect wheels
+        run: |
+          mkdir wheels
+          find . -type f -name "*.whl" -exec cp {} wheels/ \;
+
+      - name: Show collected wheels
+        run: ls -lh wheels
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          packages_dir: wheels/
+          verify_metadata: false
